Update alert style in checkout page

--- a/resources/assets/less/bem/store-page.less
+++ b/resources/assets/less/bem/store-page.less
@@ -40,5 +40,9 @@
     list-style: none;
     display: grid;
     grid-gap: 5px;
+
+    &--with-margin-bottom {
+      margin-bottom: 20px;
+    }
   }
 }
