--- a/resources/assets/less/bem/form-select.less
+++ b/resources/assets/less/bem/form-select.less
@@ -56,7 +56,7 @@
 
   &__input {
     .reset-input();
-    padding: 5px 2em 5px 5px;
+    padding: 5px calc(20px + 1em) 5px 5px;
     flex: 1;
     background-color: inherit;
     border-radius: inherit;
