--- a/resources/assets/less/bem/store-text.less
+++ b/resources/assets/less/bem/store-text.less
@@ -27,7 +27,8 @@
   }
 
   &--emphasis {
-    font-weight: bold;
+    font-weight: 600;
+    font-style: normal;
   }
 
   &--header {
@@ -37,19 +38,19 @@
 
   &--price {
     color: @pink-text;
-    font-weight: bold;
+    font-weight: 600;
     font-size: @font-size--title;
     margin-bottom: 0;
   }
 
   &--price-note {
-    font-weight: 700;
+    font-weight: 600;
   }
 
   &--title {
     font-style: normal;
     font-size: @font-size--title;
-    font-weight: 600;
+    font-weight: normal;
     margin: 0 0 20px;
     color: @osu-colour-h1;
   }
