--- a/resources/assets/less/base.less
+++ b/resources/assets/less/base.less
@@ -248,6 +248,7 @@ iframe {
 label {
   text-transform: uppercase;
   font-size: 12px;
+  font-weight: 600;
 }
 
 input[type="checkbox"], input[type="radio"] {
