Fix price text color

--- a/resources/assets/less/bem/store-text.less
+++ b/resources/assets/less/bem/store-text.less
@@ -37,7 +37,7 @@
   }
 
   &--price {
-    color: @pink-text;
+    color: @osu-colour-h1;
     font-weight: 600;
     font-size: @font-size--title;
     margin-bottom: 0;
