Extend discussion beatmap selector to allow selecting general/all

--- a/resources/assets/less/bem/simple-menu.less
+++ b/resources/assets/less/bem/simple-menu.less
@@ -212,6 +212,14 @@
       &::before {
         display: none;
       }
+
+      &--active {
+        background: @osu-colour-b5;
+
+        &:hover {
+          background: @osu-colour-b4;
+        }
+      }
     }
 
     &[disabled], &--disabled {
