--- a/resources/assets/less/bem/beatmap-discussion-user-card.less
+++ b/resources/assets/less/bem/beatmap-discussion-user-card.less
@@ -84,7 +84,7 @@
 
   &__user-stripe {
     align-self: stretch;
-    background-color: @osu-colour-b5;
+    background-color: var(--group-colour, @osu-colour-b5);
     border-radius: 1px;
     flex: none;
     width: 2px;
@@ -94,12 +94,6 @@
         display: none;
       }
     }
-
-    .osu-group-colours({
-      .@{_top}--@{group} & {
-        background-color: @@colour;
-      }
-    });
   }
 
   &__user-text {
