--- a/resources/assets/less/bem/modding-profile-vote-card.less
+++ b/resources/assets/less/bem/modding-profile-vote-card.less
@@ -87,16 +87,10 @@
 
   &__user-stripe {
     align-self: stretch;
-    background-color: @osu-colour-b5;
+    background-color: var(--group-colour, @osu-colour-b5);
     border-radius: 1px;
     flex: none;
     width: 2px;
-
-    .osu-group-colours({
-      .@{_top}--@{group} & {
-        background-color: @@colour;
-      }
-    });
   }
 
   &__user-text {
