existing variable names

--- a/resources/assets/less/bem/notification-index.less
+++ b/resources/assets/less/bem/notification-index.less
@@ -17,7 +17,9 @@
  */
 
 .notification-index {
+  margin: @gutter-v2 0;
+
   @media @desktop {
-    margin: 20px 50px;
+    margin: @gutter-v2 @gutter-v2-desktop;
   }
 }
