Correctly center news header image

--- a/resources/assets/less/bem/news-card.less
+++ b/resources/assets/less/bem/news-card.less
@@ -55,6 +55,10 @@
     .@{_top}--index & {
       height: 100%;
     }
+
+    .@{_top}--landing & {
+      height: 100%;
+    }
   }
 
   &__content {
