Remove unused styles

--- a/resources/assets/less/bem/beatmapsets-search.less
+++ b/resources/assets/less/bem/beatmapsets-search.less
@@ -48,6 +48,11 @@
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.1;
+
+    &--guest {
+      .default-header-overlay();
+      opacity: 0.5;
+    }
   }
 
   &__expand-link {
