Split off navbar mobile menu class

--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -221,6 +221,7 @@
 @import "bem/navbar-mobile";
 @import "bem/navbar-mobile-before";
 @import "bem/navbar-mobile-item";
+@import "bem/navbar-mobile-menu";
 @import "bem/navbar-mobile-search";
 @import "bem/news-card";
 @import "bem/news-index";
