--- a/resources/assets/less/bem/navbar-mobile-item.less
+++ b/resources/assets/less/bem/navbar-mobile-item.less
@@ -90,6 +90,7 @@
         height: @navbar-mobile--content-height;
         border: 2px solid fade(#fff, 50%);
         color: #fff;
+        font-size: 14px; // icon size
 
         display: flex;
         align-items: center;
