--- a/resources/assets/less/bem/navbar-mobile.less
+++ b/resources/assets/less/bem/navbar-mobile.less
@@ -17,6 +17,7 @@
  */
 
 .navbar-mobile {
+  background-color: @osu-colour-d5;
   position: fixed;
   top: 0;
   width: 100%;
@@ -30,6 +31,7 @@
     min-width: 0;
     font-size: 20px;
     line-height: 1.5; // avoid clipping
+    font-size: @font-size--title-small;
   }
 
   &__header {
