make autocomplete options links

--- a/resources/assets/less/bem/wiki-search.less
+++ b/resources/assets/less/bem/wiki-search.less
@@ -52,6 +52,10 @@
   }
 
   &__suggestion {
+    .link-plain();
+    color: @osu-colour-c1;
+    .link-hover({ color: @osu-colour-c1 });
+
     padding: 5px 20px;
 
     em {
