--- a/resources/assets/less/bem/navbar-mobile.less
+++ b/resources/assets/less/bem/navbar-mobile.less
@@ -17,7 +17,7 @@
  */
 
 .navbar-mobile {
-  background-color: @osu-colour-d5;
+  background-color: @osu-colour-h2;
   position: fixed;
   top: 0;
   width: 100%;
