Update mobile header menu
Also in:
- modifiers for quick search
- click menu autofocus

--- a/resources/assets/less/bem/btn-osu-big.less
+++ b/resources/assets/less/bem/btn-osu-big.less
@@ -304,6 +304,7 @@
     font-size: @font-size--title-small-3;
     line-height: normal;
     flex: none;
+    margin-left: 20px;
   }
 
   &--rounded {
