--- a/resources/assets/less/bem/navbar-mobile-item.less
+++ b/resources/assets/less/bem/navbar-mobile-item.less
@@ -17,30 +17,28 @@
  */
 
 .navbar-mobile-item {
-  text-transform: lowercase;
+  @_top: navbar-mobile-item;
+
+  flex: none;
+  display: flex;
+  flex-direction: column;
 
   &--user {
-    && {
-      display: flex;
-      align-items: center;
-      background-color: @osu-colour-b4;
-      text-transform: unset;
-    }
+    flex-direction: row;
+    align-items: center;
+    background-color: @osu-colour-b4;
   }
 
   &__icon {
     width: @navbar-mobile--content-height;
     margin-right: 10px;
-
-    &--main {
-      text-align: center;
-    }
+    text-align: center;
 
     // state changes at bottom
     &--closed {
       display: inline-block;
 
-      .open > a > & {
+      .@{_top}__main.js-click-menu--active > & {
         display: none;
       }
     }
@@ -48,7 +46,7 @@
     &--opened {
       display: none;
 
-      .open > a > & {
+      .@{_top}__main.js-click-menu--active > & {
         display: inline-block;
       }
     }
@@ -65,64 +63,52 @@
   }
 
   &__main {
-    // to win over bootstrap's selector
-    && {
-      color: fade(#fff, 50%);
-      display: flex;
-      align-items: center;
+    @_colour-base: osu-hsla(@osu-colour-c1, 50%);
+    @_colour-hover: @osu-colour-c1;
 
-      &:focus,
-      &:hover,
-      &:active,
-      .open > & {
-        color: #fff;
-      }
+    .reset-input();
+    .link-plain();
+    color: @_colour-base;
+    display: flex;
+    align-items: center;
+    padding: 10px @navbar-padding-horizontal;
 
-      &--user {
-        flex: 1 0 auto;
-        color: #fff;
-      }
+    &:focus {
+      color: @_colour-base;
+    }
 
-      &--logout {
-        .reset-input();
-        .default-border-radius();
-        width: @navbar-mobile--content-height;
-        height: @navbar-mobile--content-height;
-        border: 2px solid fade(#fff, 50%);
-        color: #fff;
-        font-size: 14px; // icon size
+    &:hover, &:active {
+      color: @_colour-hover;
+    }
 
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        margin-right: @navbar-padding-horizontal;
-
-        &:focus,
-        &:hover,
-        &:active {
-          background-color: @osu-colour-b3;
-          color: @osu-colour-b5;
-          border-color: transparent;
-        }
-      }
+    &.js-click-menu--active {
+      color: @_colour-hover;
     }
   }
 
   &__submenu {
-    // to win over bootstrap's selector
-    &&&& {
-      color: #fff;
-      display: flex;
-      align-items: center;
-      padding-left: (@navbar-mobile--content-height + 20px);
+    display: none;
+    list-style: none;
+    padding: 0;
 
-      &:focus,
-      &:hover,
-      &:active {
-        color: #fff;
-        background-color: @osu-colour-b3;
-      }
+    &.js-click-menu--active {
+      display: block;
     }
+  }
+
+  &__submenu-item {
+    .link-plain();
+    display: flex;
+    align-items: center;
+    padding: 5px @navbar-padding-horizontal 5px (@navbar-mobile--content-height + 30px);
+    color: @osu-colour-c2;
+
+    &:hover {
+      background-color: @osu-colour-b3;
+    }
+
+    .link-hover({
+      color: @osu-colour-c2;
+    });
   }
 }
