--- a/resources/assets/less/bem/navbar-mobile.less
+++ b/resources/assets/less/bem/navbar-mobile.less
@@ -73,6 +73,10 @@
     &:hover {
       color: @osu-colour-l1;
     }
+
+    &.js-click-menu--active {
+      transform: rotateX(0.5turn);
+    }
   }
 
   &__toggle-icon {
