--- a/resources/assets/less/bem/notification-icon.less
+++ b/resources/assets/less/bem/notification-icon.less
@@ -31,6 +31,7 @@
     flex-direction: column;
     padding-top: 10px;
     padding-bottom: 10px;
+    color: inherit;
   }
 
   &__count {
@@ -41,6 +42,13 @@
     .@{top}--mobile & {
       font-size: @font-size--small;
       margin-left: 0;
+      color: @osu-colour-c1;
+      background-color: @osu-colour-d3;
+      position: absolute;
+      padding: 2px 5px;
+      border-radius: 10000px;
+      right: 2px;
+      bottom: 2px;
     }
   }
 
