--- a/resources/assets/less/bem/user-search-card.less
+++ b/resources/assets/less/bem/user-search-card.less
@@ -22,7 +22,7 @@
   border-radius: @border-radius-large;
   background-color: @osu-colour-b4;
   font-size: @font-size--normal;
-  height: 40px;
+  min-height: 40px;
   line-height: normal;
 
   &--active {
@@ -40,7 +40,7 @@
   &__details {
     display: flex;
     align-items: center;
-    padding: 0 5px;
+    padding: 2px 5px;
     color: @osu-colour-c1;
     line-height: normal;
   }
