--- a/resources/assets/less/bem/beatmapset-search-card.less
+++ b/resources/assets/less/bem/beatmapset-search-card.less
@@ -23,7 +23,7 @@
   border-radius: @border-radius-large;
   background-color: @osu-colour-b4;
   font-size: @font-size--normal;
-  height: 40px;
+  min-height: 40px;
   line-height: normal;
 
   &--active {
@@ -33,6 +33,7 @@
   &__cover {
     object-fit: cover;
     width: 100%;
+    height: 100%;
   }
 
   &__cover-container {
@@ -46,7 +47,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 10px;
+    padding: 2px 10px;
   }
 
   &__title {
