--- a/resources/assets/less/bem/quick-search-input.less
+++ b/resources/assets/less/bem/quick-search-input.less
@@ -17,21 +17,29 @@
  */
 
 .quick-search-input {
-  .default-gutter();
-  padding-top: 25px;
-  padding-bottom: 25px;
+  .default-gutter-v2();
   display: flex;
   background-color: @osu-colour-b3;
   flex: none;
+  padding-top: 10px;
+  padding-bottom: $padding-top;
+
+  @media @desktop {
+    padding-top: 25px;
+    padding-bottom: $padding-top;
+  }
 
   &__field {
     flex: 1;
-    margin-right: 20px;
     display: flex;
     align-items: flex-end;
     padding-bottom: 5px;
     border-bottom: 2px solid @osu-colour-b1;
-    font-size: @font-size--title;
+    font-size: @font-size--phone-input;
+
+    @media @desktop {
+      font-size: @font-size--title;
+    }
   }
 
   &__icon {
