--- a/resources/assets/less/bem-index.less
+++ b/resources/assets/less/bem-index.less
@@ -179,6 +179,7 @@
 @import "bem/grid-cell";
 @import "bem/grid-items";
 @import "bem/header-buttons";
+@import "bem/header-nav-mobile";
 @import "bem/header-nav-v4";
 @import "bem/header-search-box";
 @import "bem/header-v4";
