--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -105,6 +105,7 @@
 @z-index--profile-previous-usernames: 10;
 @z-index--profile-tournament-banner: 11;
 @z-index--simple-menu: 101;
+@z-index--simple-menu-hover-object: 102;
 @z-index--admin-menu: 499;
 @z-index--back-to-top: 500;
 @z-index--fixed-bar: 502;
