--- a/resources/assets/less/bem/notification-type-group.less
+++ b/resources/assets/less/bem/notification-type-group.less
@@ -53,7 +53,7 @@
     display: flex;
     flex-direction: column;
 
-    &--legacy_pm {
+    &--standalone {
       margin-bottom: 10px;
     }
   }
