fix alignment of show less button

--- a/resources/assets/less/bem/notification-popup-item.less
+++ b/resources/assets/less/bem/notification-popup-item.less
@@ -142,6 +142,10 @@
       text-transform: uppercase;
     }
 
+    &--expand {
+      margin-top: 10px;
+    }
+
     &--message {
       .link-plain();
       .link-white();
