--- a/resources/assets/less/bem/show-more-link.less
+++ b/resources/assets/less/bem/show-more-link.less
@@ -58,8 +58,11 @@
   }
 
   &--notification-group {
-    margin-top: 10px;
     font-size: @font-size--small;
+  }
+
+  &--notification-list {
+    margin-top: 10px;
   }
 
   &--profile-page {
