More css/style cleanup

--- a/resources/assets/less/bem/beatmap-discussion-editor.less
+++ b/resources/assets/less/bem/beatmap-discussion-editor.less
@@ -119,6 +119,12 @@
     font-size: 16px;
   }
 
+  &__menu-icon {
+    width: 22px;
+    align-self: center;
+    line-height: inherit;
+  }
+
   &__message {
     .content-font();
     color: @osu-colour-f1;
