add border to popup.
so it doesn't blend in with page elements of the same colour

--- a/resources/assets/less/bem/notification-popup.less
+++ b/resources/assets/less/bem/notification-popup.less
@@ -17,9 +17,11 @@
  */
 
 .notification-popup {
+  .thick-box-shadow();
   background-color: @osu-colour-b4;
   color: #fff;
   padding: 10px 10px 15px; // to balance with type header's line height
+  border: 1px solid @osu-colour-b3;
   border-radius: @border-radius-large;
   display: flex;
   flex-direction: column;
