render whole wiki-search component at same z-index

--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -99,6 +99,7 @@
 @z-index--notification-banner-v2: 1;
 @z-index--forum-post-edit-mode: 1;
 @z-index--forum-topic-reply-stick: 1; // inside fixed-bar
+@z-index--wiki-search: 1;
 
 @z-index--beatmaps-panel: 4;
 @z-index--profile-page-cover-selector: 5;
