Clean up bem styling

--- a/resources/assets/less/bem/notification-popup-item.less
+++ b/resources/assets/less/bem/notification-popup-item.less
@@ -174,7 +174,7 @@
     border-radius: 0 6px 6px 0;
     background-color: transparent;
 
-    .@{_top}--standalone &, .@{_top}--read & {
+    .@{_top}--legacy_pm &, .@{_top}--read & {
       display: none;
     }
 
