--- a/resources/assets/less/bem/notification-index.less
+++ b/resources/assets/less/bem/notification-index.less
@@ -18,6 +18,8 @@
 
 .notification-index {
   margin: @gutter-v2 0;
+  display: grid;
+  grid-gap: 10px;
 
   @media @desktop {
     margin: @gutter-v2 @gutter-v2-desktop;
