add stripe for unread notifications

--- a/resources/assets/less/bem/notification-popup-item.less
+++ b/resources/assets/less/bem/notification-popup-item.less
@@ -183,4 +183,12 @@
     }
   }
 
+  &__unread-stripe {
+    position: absolute;
+    left: -3px;
+    width: 7px;
+    height: 100%;
+    background-color: @osu-colour-h1;
+    border-radius: 4px 0 0 4px;
+  }
 }
