inset stripe because mobile

--- a/resources/assets/less/bem/notification-popup-item.less
+++ b/resources/assets/less/bem/notification-popup-item.less
@@ -185,10 +185,9 @@
 
   &__unread-stripe {
     position: absolute;
-    left: -2px;
-    width: @border-radius-large - $left;
+    width: @border-radius-large;
     height: 100%;
-    background-color: @osu-colour-h1;
     border-radius: @border-radius-large 0 0 @border-radius-large;
+    box-shadow: inset 2px 0 @osu-colour-h1;
   }
 }
