Change rendering to handle new JSON document structure

--- a/resources/assets/less/bem/beatmap-discussion-review-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-review-post.less
@@ -17,9 +17,9 @@
  */
 
 .beatmap-discussion-review-post {
-  &__block {
-    margin-bottom: 10px;
-  }
+  //&__block {
+  //  margin-bottom: 10px;
+  //}
 
   &__link {
     .link-default();
