add user title on forum info

--- a/resources/assets/less/bem/forum-post-info.less
+++ b/resources/assets/less/bem/forum-post-info.less
@@ -85,6 +85,10 @@
       }
     }
 
+    &--title {
+      font-size: @font-size--small-2;
+    }
+
     &--username {
       font-size: @font-size--title-small-3;
       color: @osu-colour-c1;
