--- a/resources/assets/less/bem/notification-popup.less
+++ b/resources/assets/less/bem/notification-popup.less
@@ -79,7 +79,7 @@
   }
 
   &__filter-count {
-    margin-left: 5px;
+    margin-right: 5px;
     padding: 2px 10px;
     font-size: smaller;
     color: @osu-colour-c2;
