Add title to featured artist and wiki page

--- a/resources/assets/less/bem/osu-md.less
+++ b/resources/assets/less/bem/osu-md.less
@@ -107,6 +107,12 @@
       .@{top}--store-product-small & {
         font-size: @font-size--header-title;
       }
+
+      .@{top}--wiki & {
+        margin-right: 0;
+        margin-bottom: 10px;
+        margin-left: -20px;
+      }
     }
 
     &--2 {
