Fix styling on timestamps nested under bold/italic/etc tags

--- a/resources/assets/less/bem/beatmapset-discussion-message.less
+++ b/resources/assets/less/bem/beatmapset-discussion-message.less
@@ -21,13 +21,7 @@
   display: inline;
   color: white;
 
-  // TODO: remove once default link style becomes... default
-  a {
-    .link-default();
-  }
-
-  // extra specificity here to override the above rule
-  & > &__timestamp {
+  &__timestamp {
     .link-plain();
 
     border-radius: @border-radius-large;
