Add memo on navbar zindex

--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -112,6 +112,7 @@
 @z-index--fixed-bar: 502;
 @z-index--user-card-tooltip: 509;
 @z-index--blackout: 510;
+// FIXME: this should be lower than blackout and increased on mobile when the menu is active
 @z-index--nav-bar: 511;
 @z-index--blackout-visible: 512;
 @z-index--nav-float: 999;
