Adjust gutter size of profile page

--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -62,7 +62,7 @@
 // header left margin (20) + logo (100) + menu left margin (10)
 @padding-big: (20px + @logo-size + 10px);
 
-@gutter-profile-page: 20px;
+@gutter-profile-page: @gutter-v2;
 @gutter-profile-page-desktop: @gutter-desktop;
 @padding-profile-page: 10px;
 @profile-page-action: 20px;
