--- a/resources/assets/less/bem/profile-stats.less
+++ b/resources/assets/less/bem/profile-stats.less
@@ -20,7 +20,7 @@
   .inner-shadow-top();
   font-size: @font-size--title-small;
   flex: none;
-  padding: 15px 20px;
+  padding: 15px @gutter-v2;
   width: 100%;
 
   @media @desktop {
