--- a/resources/assets/less/bem/profile-stats.less
+++ b/resources/assets/less/bem/profile-stats.less
@@ -28,7 +28,7 @@
     font-size: @font-size--normal;
     padding-right: @gutter-desktop;
     width: auto;
-    min-width: (@profile-stats-box-width-desktop + @gutter-desktop + 20px);
+    min-width: (@profile-stats-box-width-desktop + @gutter-desktop + @gutter-v2);
   }
 
   &__entry {
